Refactored the API
