# src/utils/Validators.js
@@ -16,19 +16,19 @@ const createSurveyValidationRules = [
     body("description").exists(),
     body("secured").exists().isBoolean(),
     body("constrained_questions").exists().isArray(),
-    body("constrained_questions.*.title").exists(),
+    body("constrained_questions.*.question_text").exists(),
     body("constrained_questions.*.position").exists(),
     body("constrained_questions.*.options").exists(),
-    body("constrained_questions.*.options.*.name").exists(),
+    body("constrained_questions.*.options.*.answer").exists(),
     body("constrained_questions.*.options.*.position").exists().isNumeric(),
     body("freestyle_questions").exists().isArray(),
-    body("freestyle_questions.*.title").exists(),
+    body("freestyle_questions.*.question_text").exists(),
     body("freestyle_questions.*.position").exists().isNumeric()
 ];
 
 const createTokenValidationRules = [
     query("amount").exists().isNumeric(),
-    query("survey_id").exists().isNumeric(),
+    query("survey_id").exists().isNumeric()
 ];
 
 /**
